# clipboard

./: .gitattributes  .gitignore  .gitmodules  .prettierignore  .taplo.toml  Cargo.toml  README.md  README.zh-CN.md  READNE.md  demo.ts  exp.ts  go.mod  go.sum  index.d.ts  index.js  index.ts  jest.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
.github/workflows/: CI.yml  build-exe.yml  test.yml
.journal/: 2026-02-07.md
__test__/: index.spec.mjs  index.spec.ts
__tests__/: data.ts  index.spec.ts
examples/: demo.ts  image.ts  tsconfig.json
go-clipboard/: Makefile  client.go  go-clipboard-monitor-linux-arm  go-clipboard-monitor-linux-arm64  main.go  server.js
go-clipboard-monitor/: Makefile  go-clipboard-monitor-darwin-arm64  go-clipboard-monitor-darwin-x64  go-clipboard-monitor-linux-386  go-clipboard-monitor-linux-x64  go.mod  main.go
go-clipboard/example/: .gitignore  README.md  cb-ops.js  server.js
go-clipboard/lib/: win_write_image.go  xclip.go
go-clipboard/scripts/win/: read_image.ps1  read_text.ps1  write_image.ps1  write_text.ps1
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-riscv64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: constants.ts  lib.rs  util.ts
