[package]
edition = "2021"
name = "crosscopy_clipboard"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
clipboard-rs = "0.3.2"
napi = { version = "3", features = ["tokio_rt"] }
napi-derive = "3"
tokio = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
